--- a/Car_price_final.ipynb
+++ b/Car_price_final.ipynb
@@ -69,21 +69,22 @@
    "metadata": {},
    "source": [
     "Features description\n",
+    "\n",
     "Source: https://www.kaggle.com/adityadesai13/used-car-dataset-ford-and-mercedes\n",
     "\n",
-    ">100K used cars postings from the British used cars site.\n",
+    "\\>100K used cars postings from the British used cars site.\n",
     "\n",
-    "brand car manufacturer\n",
-    "model car model\n",
-    "year registration year\n",
-    "transmission type of gearbox (Manual, Semi-Auto, Automatic, Other)\n",
-    "mileage distance used, miles\n",
-    "fuelType engine fuel type (Diesel, Petrol, Hybrid, Electric, Other)\n",
-    "tax road tax, £\n",
-    "mpg miles per gallon (how many miles car can cover using 1 gallon of fuel; more miles -- less money spent on fuel)\n",
-    "engineSize engine size (volume) in litres\n",
-    "tax(£) road tax, £\n",
-    "price car price, £"
+    "- **brand** car manufacturer\n",
+    "- **model** car model\n",
+    "- **year** registration year\n",
+    "- **transmission** type of gearbox (Manual, Semi-Auto, Automatic, Other)\n",
+    "- **mileage** distance used, miles\n",
+    "- **fuelType** engine fuel type (Diesel, Petrol, Hybrid, Electric, Other)\n",
+    "- **tax** road tax, £\n",
+    "- **mpg** miles per gallon (how many miles car can cover using 1 gallon of fuel; more miles -- less money spent on fuel)\n",
+    "- **engineSize** engine size (volume) in litres\n",
+    "- **tax(£)** road tax, £\n",
+    "- **price** car price, £"
    ]
   },
   {
